--- a/homecare.html
+++ b/homecare.html
@@ -63,12 +63,12 @@
     </nav>
 
     <div class="con2" style="color: #77c9e6; background-color:; padding: 2% 6%; padding-bottom: 2rem;">
-      <h1 class="display-4" style="padding-top: 4%; text-align: center; color: #77c9e6; font-size: 2rem; font-family: 'Quicksand', sans-serif; font-weight: 700;">
-        Caregiver Jobs</h1>
+      <!--<h1 class="display-4" style="padding-top: 4%; text-align: center; color: #77c9e6; font-size: 2rem; font-family: 'Quicksand', sans-serif; font-weight: 700;">
+        Caregiver Jobs</h1>-->
         <img style="object-fit: fill; padding-top: 2%; max-width:100%; max-height:100%;"
-        src="https://www.hopkinsmedicine.org/-/media/images/health/4_-caregiving/caregiver-guides/being-a-caregiver-hero.ashx?h=500&iar=0&mh=500&mw=1300&w=1297&hash=D9038DD985C4B33909AD65BBBA8D16B1" class="cover-image">
-      <br><br>
-      <h4 class="display-4" style="padding: 2% 0 0 0; text-align: left; color: #272727; font-size: 1.2rem; font-family: 'Quicksand', sans-serif; font-weight: 500;">
+        src="https://i.ibb.co/b74gGKX/caregiverjobs.png" class="cover-image">
+      <br>
+      <h4 class="display-4" style="padding: 2% 0 0 0; text-align: left; color: #272727; font-size: 1rem; font-family: 'Quicksand', sans-serif; font-weight: 500;">
 You can make a rewarding career out of making a positive difference in the lives of local seniors and their families by joining
 our Visiting Angels' team. Visiting Angels' caregivers make life at home safer, happier, and more comfortable for seniors.
 As a member of the Visiting Angels team, you will make aging in place possible and help minimize the risk of senior isolation
