--- a/index.html
+++ b/index.html
@@ -61,9 +61,10 @@
         </div>
       </div>
     </nav>
-    <div class="landingfirst" style="padding: 14% 14%; background: url('https://i.ibb.co/vk2YfGf/bgbg.png');">
+    <div class="landingfirst" style="padding: 4% 10%; background: url('https://i.ibb.co/vk2YfGf/bgbg.png');">
       <div class="row firstconpad" style="">
-        <div class="col-lg" style="">
+        <div class="col-lg leftside" style="">
+          <br><br class="secondbr">
           <h1 class="display-4" style="font-size: 1.70rem; font-family: 'Quicksand', sans-serif; font-weight: 700;">👋🏼👋🏼👋🏼</h1>
           <h3 class="lead" style="font-family: 'Quicksand', sans-serif; font-weight: 700; font-size: 1.56rem;"><span style="color: #455434; font-weight: 900;">Comfort Loving Home Care</span> is the
             home of comfort. Welcome to Pennsylvenia’s Finest Home Care Provider.</h3>
@@ -72,13 +73,41 @@
           <br>
           <a href="homecare.html" class="btn btn-sm" role="button" aria-disabled="true" style="background-color: #77c9e6; color: white; border: 4px solid #77c9e6; border-radius: 25px;
             font-family: 'Quicksand', sans-serif; font-weight: 700;" class="btn">&nbsp;&nbsp;<i class="fa-regular fa-calendar-check"></i> Book Assessment&nbsp;&nbsp;</a>
-            <a href="homecare.html" class="btn btn-sm" role="button" aria-disabled="true" style="border: 4px solid #455434; border-radius: 25px; color: #455434;
+          <a href="homecare.html" class="btn btn-sm" role="button" aria-disabled="true" style="border: 4px solid #455434; border-radius: 25px; color: #455434;
           font-family: 'Quicksand', sans-serif; font-weight: 700;" class="btn">&nbsp;&nbsp;<i class="fa-solid fa-hand-holding-medical"></i> Join Us&nbsp;&nbsp;</a>
-            <br>
+          <br>
         </div>
         <div style="" class="col-sm">
-          &nbsp; <br><br><br><br>
-        </div>
+          <section class="sectiontop">
+  <div class="container">
+    <form action="linkhere" method="POST" id="my-form">
+
+      <div class="form-group">
+        <label for="firstName"> First Name</label>
+        <input type="text" id="firstName" name="firstName">
+      </div>
+
+      <div class="form-group">
+        <label for="latsName">Last Name</label>
+        <input type="text" id="lastName" name="lastName">
+      </div>
+
+      <div class="form-group">
+        <label for="email">Email</label>
+        <input type="email" id="email" name="email">
+      </div>
+
+      <div class="form-group">
+        <label for="massage">Massage</label>
+        <textarea name="massage" id="massage" cols="30" rows="5"></textarea>
+      </div>
+
+      <button type="submit" style="font-weight: 700;">Submit</button>
+    </form>
+  </div>
+  <div id="status"></div>
+</section>
+</div>
       </div>
     </div>
 
@@ -137,9 +166,9 @@
             <img src="images/cardgroom.png" class="card-img-top" alt="...">
             <div class="card-body">
               <p class="card-text" style="padding-bottom: 1rem;">CLHC's programs ensures dignified and compassionate care for your loved one so they can remain independent in their home. Browse through our list of services to learn more.</p>
-            <a class="btn btn-sm" role="button" aria-disabled="true" style="border: 4px solid #455434; border-radius: 25px; color: #455434;
+              <a class="btn btn-sm" role="button" aria-disabled="true" style="border: 4px solid #455434; border-radius: 25px; color: #455434;
               font-family: 'Quicksand', sans-serif; font-weight: 700;" class="btn">&nbsp;&nbsp;Read more&nbsp;</a>
-          </div>
+            </div>
           </div>
         </div>
         <div class="col">
@@ -147,9 +176,9 @@
             <img src="images/cardmed.png" class="card-img-top" alt="...">
             <div class="card-body">
               <p class="card-text" style="padding-bottom: 1rem;">CLHC's programs ensures dignified and compassionate care for your loved one so they can remain independent in their home. Browse through our list of services to learn more.</p>
-            <a class="btn btn-sm" role="button" aria-disabled="true" style="border: 4px solid #3b6473; border-radius: 25px; color: #455434;
+              <a class="btn btn-sm" role="button" aria-disabled="true" style="border: 4px solid #3b6473; border-radius: 25px; color: #455434;
               font-family: 'Quicksand', sans-serif; font-weight: 700;" class="btn">&nbsp;&nbsp;Read more&nbsp;</a>
-          </div>
+            </div>
           </div>
         </div>
         <div class="col">
@@ -157,9 +186,9 @@
             <img src="images/cardmeal.png" class="card-img-top" alt="...">
             <div class="card-body">
               <p class="card-text" style="padding-bottom: 1rem;">CLHC's programs ensures dignified and compassionate care for your loved one so they can remain independent in their home. Browse through our list of services to learn more.</p>
-            <a class="btn btn-sm" role="button" aria-disabled="true" style="border: 4px solid #3b6473; border-radius: 25px; color: #455434;
+              <a class="btn btn-sm" role="button" aria-disabled="true" style="border: 4px solid #3b6473; border-radius: 25px; color: #455434;
               font-family: 'Quicksand', sans-serif; font-weight: 700;" class="btn">&nbsp;&nbsp;Read more&nbsp;</a>
-          </div>
+            </div>
           </div>
         </div>
         <div class="col">
@@ -167,9 +196,9 @@
             <img src="images/cardlight.png" class="card-img-top" alt="...">
             <div class="card-body">
               <p class="card-text" style="padding-bottom: 1rem;">CLHC's programs ensures dignified and compassionate care for your loved one so they can remain independent in their home. Browse through our list of services to learn more.</p>
-            <a class="btn btn-sm" role="button" aria-disabled="true" style="border: 4px solid #455434; border-radius: 25px; color: #455434;
+              <a class="btn btn-sm" role="button" aria-disabled="true" style="border: 4px solid #455434; border-radius: 25px; color: #455434;
               font-family: 'Quicksand', sans-serif; font-weight: 700;" class="btn">&nbsp;&nbsp;Read more&nbsp;</a>
-          </div>
+            </div>
           </div>
         </div>
       </div>
