--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
       </div>
 
       <div class="form-group">
-        <label for="latsName">Last Name</label>
+        <label for="latsName">Phone number</label>
         <input type="text" id="lastName" name="lastName">
       </div>
 
