--- a/index.html
+++ b/index.html
@@ -80,10 +80,10 @@
         <div style="" class="col-sm">
           <section class="sectiontop">
   <div class="container">
-    <form action="linkhere" method="POST" id="my-form">
+    <form action="https://formspree.io/f/mayvzqeg" method="POST" id="my-form">
 
       <div class="form-group">
-        <label for="firstName"> First Name</label>
+        <label for="firstName"> Name</label>
         <input type="text" id="firstName" name="firstName">
       </div>
 
