--- a/services.html
+++ b/services.html
@@ -49,7 +49,7 @@
             <a href="#" class="nav-item nav-link">Careers</a>-->
           </div>
           <div class="navbar-nav nav-linkexpand ms-auto ml-auto" style="text-align: right; float: right !important; font-family: 'Quicksand', sans-serif; font-weight: 700;">
-            <a href="idex.html" style="color: white;" class="nav-item nav-link float-right">Home</a>
+            <a href="index.html" style="color: white;" class="nav-item nav-link float-right">Home</a>
             <a href="aboutus.html" style="color: white;" class="nav-item nav-link float-right">About Us</a>
             <a href="services.html" style="color: white;" class="nav-item nav-link">Services</a>
             <a href="homecare.html" style="color: white;" class="nav-item nav-link">Careers</a>
