--- a/aboutus.html
+++ b/aboutus.html
@@ -61,82 +61,40 @@
         </div>
       </div>
     </nav>
-
-    <div class="con2" style="color: #77c9e6; background-color:; padding: 2% 6%; padding-bottom: 2rem;">
+    <img style="object-fit: fill; padding-top:; max-width:100%; max-height:100%;" src="https://i.ibb.co/JchB0gc/bgbgbgb.png" class="cover-image">
+    <div class="con2" style="color: #77c9e6; background-color:; padding:; padding-bottom: 2rem;">
       <!--<h1 class="display-4" style="padding-top: 4%; text-align: center; color: #77c9e6; font-size: 2rem; font-family: 'Quicksand', sans-serif; font-weight: 700;">
         Caregiver Jobs</h1>-->
-        <img style="object-fit: fill; padding-top: 2%; max-width:100%; max-height:100%;"
-        src="https://i.ibb.co/b74gGKX/caregiverjobs.png" class="cover-image">
       <br>
-      <h4 class="display-4" style="padding: 2% 0 0 0; text-align: left; color: #272727; font-size: 1.2rem; font-family: 'Quicksand', sans-serif; font-weight: 500;">
-You can make a rewarding career out of making a positive difference in the lives of local seniors and their families by joining
-our Visiting Angels' team. Visiting Angels' caregivers make life at home safer, happier, and more comfortable for seniors.
-As a member of the Visiting Angels team, you will make aging in place possible and help minimize the risk of senior isolation
-and the effects that come with it.<br><br>
-CLHC offers a wide range of caregiver jobs to qualified applicants. We recruit positions related to:<br><br>
-Our locations offer part-time and full-time home care positions with flexible scheduling and highly competitive pay.<br><br>
-<ul>
-  <li>Companion care</li>
-  <li>Elderly care</li>
-  <li>Personal or private care</li>
-  <li>Assisted living</li>
-  <li>Home care assistants (home care aides)</li>
-</ul>
-<br>
+      <h4 class="display-4" style="padding: 3% 15% 2% 15%; text-align: left; color: #272727; font-size: 1rem; font-family: 'Quicksand', sans-serif; font-weight: 500;">
+        “There is no place like home,” as the adage goes. Indeed, recovery rates for patients cared inside a more familiar
+        environment go much faster and higher compared to that of patients confined inside a healthcare institution. Comfort loving
+        Home Care, an agency focusing in home care in Lancaster, Pennsylvania, can be your partner in rebuilding your future
+        by helping you recover from a recent illness that requires monitoring. We will help you deal with the stresses of healing;
+         and as for family caregivers, we will assist you and make your load lighter in the process.<br><br>
+         Our agency is known for its unequivocal quality of healthcare services. Provided only by carefully selected Registered
+         HHAs and therapists, we assure you of a much-hastened process of recovery, allowing you to enjoy life better. Be one with
+         Comfort Loving Home Care in its pursuit toward building a worry-free state, especially for the sick and the elders.
 
-Our locations offer <span style="font-weight: 700;">part-time and full-time</span> home care positions with flexible scheduling and highly competitive pay.<br><br>
-</h4><br>
+<br><br><span style="font-weight: 800;">Call us today by dialing 717-824-7199 or access our contact us to send us a message online.</span></h4><br><br>
 
-<img style="object-fit: fill; padding-top: 2%; max-width:100%; max-height:100%;"
-src="https://i.ibb.co/LJYTXYR/jobduties.png" class="cover-image">
-<br>
-<h4 class="display-4" style="padding: 2% 0 0 0; text-align: left; color: #272727; font-size: 1.2rem; font-family: 'Quicksand', sans-serif; font-weight: 500;">
-Our professional caregiver duties will vary depending on the needs and requests of the client and family. Common home care
-duties and caregiver job descriptions may include:<br><br>
-<ul>
-<li>Personal care assistance (bathing, grooming, dressing, toileting, etc.)</li>
-<li>Companionship and emotional support</li>
-<li>Meal planning and preparation</li>
-<li>Laundry and light housekeeping</li>
-<li>Medication reminders</li>
-<li>Assistance with other activities of daily living </li>
-</ul>
-<img style="object-fit: fill; padding-top: 2%; max-width:100%; max-height:100%;"
-src="https://i.ibb.co/LJYTXYR/jobduties.png" class="cover-image">
-<br>
-<h4 class="display-4" style="padding: 2% 0 0 0; text-align: left; color: #272727; font-size: 1.2rem; font-family: 'Quicksand', sans-serif; font-weight: 500;">
-  We believe a caregiver's enthusiasm and passion for building relationships with clients is as important as their professional qualifications. Above all else, we are searching for positive and hardworking people who love caring for others.
-  <br>
-  We look for caregivers who demonstrate the following qualities:<br><br>
-<ul>
-<ol><i style="color: #77c9e6;" class="fa-solid fa-check"></i>&nbsp;Warmth, kindness, and a loving spirit</ol>
-<ol><i style="color: #77c9e6;" class="fa-solid fa-check"></i>&nbsp;Empathy and compassion</ol>
-<ol><i style="color: #77c9e6;" class="fa-solid fa-check"></i>&nbsp;Motivation and patience</ol>
-<ol><i style="color: #77c9e6;" class="fa-solid fa-check"></i>&nbsp;Communication and listening skills</ol>
-<ol><i style="color: #77c9e6;" class="fa-solid fa-check"></i>&nbsp;Observation and attention to detail</ol>
-<ol><i style="color: #77c9e6;" class="fa-solid fa-check"></i>&nbsp;Time management and organization</ol>
-</ul>
-<br>
-Additional qualifications or certifications may be required, depending on the hiring practices of your local office or
-regulations in your state. We encourage you to speak with your local Visiting Angels office about its hiring practices
-and job requirements.
-</h4><br><br><br><br><br>
-    <div class="con1">
-      <div class="row" style="margin: 0 10% 0 10%;">
-        <div class="col-sm-6">
-
-        </div>
-        <div class="col-sm-6">
-
-        </div>
-      </div>
+<div class="container text-center">
+  <div class="row">
+    <div class="col"><img style="object-fit: fill; padding-top:; max-width:100%; max-height:100%;" src="https://i.ibb.co/gjBgQnL/im.png" class="cover-image">
+    </div>
+    <div class="col"><img style="object-fit: fill; padding-top:; max-width:100%; max-height:100%;" src="https://i.ibb.co/gjBgQnL/im.png" class="cover-image">
+    </div>
+    <div class="col"><img style="object-fit: fill; padding-top:; max-width:100%; max-height:100%;" src="https://i.ibb.co/gjBgQnL/im.png" class="cover-image">
+    </div>
+    <div class="col"><img style="object-fit: fill; padding-top:; max-width:100%; max-height:100%;" src="https://i.ibb.co/gjBgQnL/im.png" class="cover-image">
     </div>
   </div>
+</div>
 
 
-  <footer class="footer fixed-bottom text-center" style="color: white; background-color: #3d4122;">
-    <p class="footer" style="font-family: 'Quicksand', sans-serif; font-weight: 700;">© 2022 Comfort Loving Home Care</p>
-  </footer>
+      <footer class="footer fixed-bottom text-center" style="color: white; background-color: #3d4122;">
+        <p class="footer" style="font-family: 'Quicksand', sans-serif; font-weight: 700;">© 2022 Comfort Loving Home Care</p>
+      </footer>
 </body>
 
 </html>
