--- a/aboutus.html
+++ b/aboutus.html
@@ -80,7 +80,7 @@
 
 <div class="container text-center">
   <div class="row">
-    <div class="col"><img style="object-fit: fill; padding-top:; max-width:100%; max-height:100%;" src="https://i.ibb.co/gjBgQnL/im.png" class="cover-image">
+    <div class="col style="padding-right: 0; padding-left: 0;"><img style="object-fit: fill; padding-top:; max-width:100%; max-h style="padding-right: 0; padding-left: 0;eight:100%;" src="https://i.ibb.co/gjBgQnL/im.png" class="cover-image">
     </div>
     <div class="col"><img style="object-fit: fill; padding-top:; max-width:100%; max-height:100%;" src="https://i.ibb.co/gjBgQnL/im.png" class="cover-image">
     </div>
@@ -91,6 +91,40 @@
   </div>
 </div>
 
+<div style="padding: 5% 15% 2% 15%; background: url('https://i.ibb.co/GW0XVfS/bgbgbgbgbg.png');" class="col-sm">
+  <h4 class="display-4 ourserviceheadtext text-center" style="padding: 0 5rem 2% 5rem; text-align: center; color: black; font-size: 1.2rem; font-family: 'Quicksand', sans-serif; font-weight: 700;">
+    Are you interested in starting your career with us today? Contact us by filling the form below and we will be back in touch with you shortly.</h4><br>
+  <br>
+  <section class="sectiontop">
+<div class="container" style="color: black; font-weight: 700;">
+<form action="https://formspree.io/f/xzboqdyp" method="POST" id="my-form">
+
+<div class="form-group">
+<label for="firstName"> Name</label>
+<input type="text" id="firstName" name="firstName">
+</div>
+
+<div class="form-group">
+<label for="latsName">Phone number</label>
+<input type="text" id="lastName" name="lastName">
+</div>
+
+<div class="form-group">
+<label for="email">Email</label>
+<input type="email" id="email" name="email">
+</div>
+
+<div class="form-group">
+<label for="message">Message:</label>
+<textarea name="message" id="message" cols="30" rows="5"></textarea>
+</div>
+
+<button type="submit" style="font-weight: 700;">Submit</button>
+</form>
+</div>
+<div id="status"></div>
+</section>
+</div>
 
       <footer class="footer fixed-bottom text-center" style="color: white; background-color: #3d4122;">
         <p class="footer" style="font-family: 'Quicksand', sans-serif; font-weight: 700;">© 2022 Comfort Loving Home Care</p>
