--- a/homecare.html
+++ b/homecare.html
@@ -85,7 +85,7 @@ Our locations offer part-time and full-time home care positions with flexible sc
 </ul>
 <br>
 
-<h4 style="padding: 7% 15% 7% 15%; color: black; background: url('https://i.ibb.co/SVVYWZj/bgbg.png'); text-align: left; font-size: 1.2rem; font-family: 'Quicksand', sans-serif; font-weight: 500;">Our locations offer <span style="font-weight: 700;">part-time and full-time</span> home care positions with flexible scheduling and highly competitive pay.<br><br>
+<h4 style="padding: 7% 15% 7% 15%; color: black; background: url('https://i.ibb.co/GW0XVfS/bgbgbgbgbg.png'); text-align: left; font-size: 1.2rem; font-family: 'Quicksand', sans-serif; font-weight: 500;">Our locations offer <span style="font-weight: 700;">part-time and full-time</span> home care positions with flexible scheduling and highly competitive pay.<br><br>
 Our professional caregiver duties will vary depending on the needs and requests of the client and family. Common home care
 duties and caregiver job descriptions may include:<br><br>
 <ul>
@@ -127,8 +127,8 @@ and job requirements.
     </div>
   </div>
 
-  <div style="padding: 5% 15% 2% 15%; background-color: #e8eced;" class="col-sm">
-    <h4 class="display-4 ourserviceheadtext text-center" style="padding: 0 5rem 2% 5rem; text-align: center; color: #272727; font-size: 1.2rem; font-family: 'Quicksand', sans-serif; font-weight: 700;">
+  <div style="padding: 5% 15% 2% 15%; background-color: #e3f7ff;" class="col-sm">
+    <h4 class="display-4 ourserviceheadtext text-center" style="padding: 0 5rem 2% 5rem; text-align: center; color: #272727; font-size: 1.2rem; font-family: 'Quicksand', sans-serif; font-weight: 500;">
       Are you interested in starting your career with us today? Contact us by filling the form below and we will be back in touch with you shortly.</h4><br>
     <br>
     <section class="sectiontop">
