--- a/homecare.html
+++ b/homecare.html
@@ -151,7 +151,7 @@ and job requirements.
 </div>
 
 <div class="form-group">
-  <label for="message">Message:</label>
+  <label for="message">Message:<label>
   <textarea name="message" id="message" cols="30" rows="5"></textarea>
 </div>
 
@@ -163,7 +163,7 @@ and job requirements.
 </div>
 
   <footer class="footer fixed-bottom text-center" style="color: white; background-color: #3d4122;">
-    <p class="footer" style="font-family: 'Quicksand', sans-serif; font-weight: 700;">© 2022 Comfort Loving Home Care</p>
+    <p class="footer" style="font-family: 'Quicksand', sans-serif; font-weight: 700;">© 2022 Comfort Loving HomeCare</p>
   </footer>
 </body>
 
