--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         </div>
         <div style="" class="col-sm">
           <section class="sectiontop">
-  <div class="container">
+  <div class="container" style="font-weight: 400;">
     <form action="https://formspree.io/f/xzboqdyp" method="POST" id="my-form">
 
       <div class="form-group">
