--- a/services.html
+++ b/services.html
@@ -100,7 +100,7 @@
               <div class="col servicelistmargin" style="padding: 4% 2% 2% 2%; margin: 0 2% 2% 2%; background-color: #1a5f77">
                 <h4 class="text-center" style="padding:; text-align: left; color: white; font-size: 1.3rem; font-family: 'Quicksand', sans-serif; font-weight: 800;">
                   Companion Services</h4>
-                <ul class="" style="color: white; padding-top: 2%; font-size: 0.9rem;">
+                <ul class="" style="color: #ecffd5; padding-top: 2%; font-size: 0.9rem;">
                   <li>General companion care</li>
                   <li>Medication reminders</li>
                   <li>Meal preparation</li>
@@ -115,7 +115,7 @@
               <div class="col servicelistmargin" style="padding: 4% 2% 2% 2%; margin: 0 2% 2% 2%; background-color: #1a5f77">
                 <h4 class="text-center" style="padding:; text-align: left; color: white; font-size: 1.3rem; font-family: 'Quicksand', sans-serif; font-weight: 800;">
                   Personal Care Services</h4>
-                <ul style="color: white; padding-top: 2%; font-size: 0.9rem;">
+                <ul style="color: #ecffd5; padding-top: 2%; font-size: 0.9rem;">
                   <li>Bathing, grooming, dressing</li>
                   <li>Toileting</li>
                   <li>Incontinence</li>
@@ -127,7 +127,7 @@
               <div class="col servicelistmargin" style="padding: 4% 2% 2% 2%; margin: 0 2% 2% 2%; background-color: #1a5f77">
                 <h4 class="text-center" style="padding:; text-align: left; color:  white; font-size: 1.3rem; font-family: 'Quicksand', sans-serif; font-weight: 800;">
                   Other Services </h4>
-                <ul style="color: white; padding-top: 2%; font-size: 0.9rem;">
+                <ul style="color: #ecffd5; padding-top: 2%; font-size: 0.9rem;">
                   <li>Companion care</li>
                   <li>Elderly care</li>
                   <li>Personal or private care</li>
