--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
 
     <div style="color: #272727; background-color: white; padding: 4rem 8%; padding-bottom: 2rem;">
       <h1 class="display-4" style="text-align: center; color: #272727; font-size: 1.70rem;
-        font-family: 'Quicksand', sans-serif; font-weight: 700; padding-bottom: 2% !important;">How we can help you</h1>
+        font-family: 'Quicksand', sans-serif; font-weight: 700; padding-bottom: 2% !important;"></h1>
 
     </div>
     <!--<div class="col-sm" style="padding-top: 4rem;">
