--- a/index.html
+++ b/index.html
@@ -69,17 +69,18 @@
           <h3 class="lead" style="font-family: 'Quicksand', sans-serif; font-weight: 700; font-size: 1.56rem;"><span style="color: #455434; font-weight: 900;">Comfort Loving Home Care</span> is the
             home of comfort. Welcome to Pennsylvenia’s Finest Home Care Provider.</h3>
           <p class="lead" style="font-family: 'Quicksand', sans-serif; font-weight: 400; font-size: 1rem;">Comfort Loving Home Care is dedicated
-            to providing the highest quality in home health and personal care services for the valued patients in Delaware.</p>
+            to providing the highest quality in home health and personal care services for the valued patients in Pennsylvenia.</p>
           <br>
           <a href="homecare.html" class="btn btn-sm" role="button" aria-disabled="true" style="background-color: #77c9e6; color: white; border: 4px solid #77c9e6; border-radius: 25px;
             font-family: 'Quicksand', sans-serif; font-weight: 700;" class="btn">&nbsp;&nbsp;<i class="fa-regular fa-calendar-check"></i> Book Assessment&nbsp;&nbsp;</a>
-          <a href="homecare.html" class="btn btn-sm" role="button" aria-disabled="true" style="border: 4px solid #455434; border-radius: 25px; color: #455434;
+          <a href="homecare.html" class="btn btn-sm" role="button" aria-disabled="true" style="border: 4px solid #455434; border-radius: 25px; color: #455434 !important;
           font-family: 'Quicksand', sans-serif; font-weight: 700;" class="btn">&nbsp;&nbsp;<i class="fa-solid fa-hand-holding-medical"></i> Join Us&nbsp;&nbsp;</a>
           <br>
         </div>
         <div style="" class="col-sm">
           <section class="sectiontop">
   <div class="container" style="font-weight: 400;">
+    <h4 style="font-size: 1.1rem; font-weight: 700;"> Have a question? send us a message.</h4>
     <form action="https://formspree.io/f/xzboqdyp" method="POST" id="my-form">
 
       <div class="form-group">
@@ -99,7 +100,7 @@
 
       <div class="form-group">
         <label for="message">Message:</label>
-        <textarea name="message" id="message" cols="30" rows="5"></textarea>
+        <textarea name="message" id="message" cols="30" rows="4"></textarea>
       </div>
 
       <button type="submit" style="font-weight: 700;">Submit</button>
@@ -115,7 +116,7 @@
     <div class="con2" style="color: black; background-color:; padding: 4% 8% 8% 8%; padding-bottom: 2rem;">
       <h1 class="display-4 text-center" style="padding-top: 4%; text-align: center; color: #77c9e6; font-size: 2rem; font-family: 'Quicksand', sans-serif; font-weight: 700;">
         Our Services</h1>
-      <h4 class="display-4 ourserviceheadtext text-center" style="padding: 0 5rem 2% 5rem; text-align: center; color: #272727; font-size: 1.2rem; font-family: 'Quicksand', sans-serif; font-weight: 700;">
+      <h4 class="display-4 ourserviceheadtext text-center" style="padding: 0 5rem 2% 5rem; text-align: center; color: #272727; font-size: 1.2rem; font-family: 'Quicksand', sans-serif; font-weight: 500;">
         CLHC's programs ensures dignified and compassionate care for your loved one so they can remain independent in their home. Browse through our list of services to learn more.</h4><br>
       <br>
       <!--<div class="row">
@@ -167,7 +168,7 @@
             <div class="card-body">
               <p class="card-text" style="padding-bottom: 1rem;">CLHC's programs ensures dignified and compassionate care for your loved one so they can remain independent in their home. Browse through our list of services to learn more.</p>
               <a class="btn btn-sm" role="button" aria-disabled="true" style="border: 4px solid #455434; border-radius: 25px; color: #455434;
-              font-family: 'Quicksand', sans-serif; font-weight: 700;" class="btn">&nbsp;&nbsp;Read more&nbsp;</a>
+              font-family: 'Quicksand', sans-serif; font-weight: 700; color: black !important;" class="btn">&nbsp;&nbsp;Read more&nbsp;</a>
             </div>
           </div>
         </div>
@@ -177,7 +178,7 @@
             <div class="card-body">
               <p class="card-text" style="padding-bottom: 1rem;">CLHC's programs ensures dignified and compassionate care for your loved one so they can remain independent in their home. Browse through our list of services to learn more.</p>
               <a class="btn btn-sm" role="button" aria-disabled="true" style="border: 4px solid #3b6473; border-radius: 25px; color: #455434;
-              font-family: 'Quicksand', sans-serif; font-weight: 700;" class="btn">&nbsp;&nbsp;Read more&nbsp;</a>
+              font-family: 'Quicksand', sans-serif; font-weight: 700; color: black !important;" class="btn">&nbsp;&nbsp;Read more&nbsp;</a>
             </div>
           </div>
         </div>
@@ -187,7 +188,7 @@
             <div class="card-body">
               <p class="card-text" style="padding-bottom: 1rem;">CLHC's programs ensures dignified and compassionate care for your loved one so they can remain independent in their home. Browse through our list of services to learn more.</p>
               <a class="btn btn-sm" role="button" aria-disabled="true" style="border: 4px solid #3b6473; border-radius: 25px; color: #455434;
-              font-family: 'Quicksand', sans-serif; font-weight: 700;" class="btn">&nbsp;&nbsp;Read more&nbsp;</a>
+              font-family: 'Quicksand', sans-serif; font-weight: 700; color: black !important;" class="btn">&nbsp;&nbsp;Read more&nbsp;</a>
             </div>
           </div>
         </div>
@@ -197,7 +198,50 @@
             <div class="card-body">
               <p class="card-text" style="padding-bottom: 1rem;">CLHC's programs ensures dignified and compassionate care for your loved one so they can remain independent in their home. Browse through our list of services to learn more.</p>
               <a class="btn btn-sm" role="button" aria-disabled="true" style="border: 4px solid #455434; border-radius: 25px; color: #455434;
-              font-family: 'Quicksand', sans-serif; font-weight: 700;" class="btn">&nbsp;&nbsp;Read more&nbsp;</a>
+              font-family: 'Quicksand', sans-serif; font-weight: 700; color: black !important;" class="btn">&nbsp;&nbsp;Read more&nbsp;</a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <br>
+      <div class="row row-cols-1 row-cols-md-2 g-4">
+        <div class="col">
+          <div class="card">
+            <img src="" class="card-img-top" alt="...">
+            <div class="card-body">
+              <p class="card-text" style="padding-bottom: 1rem;">CLHC's programs ensures dignified and compassionate care for your loved one so they can remain independent in their home. Browse through our list of services to learn more.</p>
+              <a class="btn btn-sm" role="button" aria-disabled="true" style="border: 4px solid #455434; border-radius: 25px; color: #455434;
+              font-family: 'Quicksand', sans-serif; font-weight: 700; color: black !important;" class="btn">&nbsp;&nbsp;Read more&nbsp;</a>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img src="" class="card-img-top" alt="...">
+            <div class="card-body">
+              <p class="card-text" style="padding-bottom: 1rem;">CLHC's programs ensures dignified and compassionate care for your loved one so they can remain independent in their home. Browse through our list of services to learn more.</p>
+              <a class="btn btn-sm" role="button" aria-disabled="true" style="border: 4px solid #3b6473; border-radius: 25px; color: #455434;
+              font-family: 'Quicksand', sans-serif; font-weight: 700; color: black !important;" class="btn">&nbsp;&nbsp;Read more&nbsp;</a>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img src="" class="card-img-top" alt="...">
+            <div class="card-body">
+              <p class="card-text" style="padding-bottom: 1rem;">CLHC's programs ensures dignified and compassionate care for your loved one so they can remain independent in their home. Browse through our list of services to learn more.</p>
+              <a class="btn btn-sm" role="button" aria-disabled="true" style="border: 4px solid #3b6473; border-radius: 25px; color: #455434;
+              font-family: 'Quicksand', sans-serif; font-weight: 700; color: black !important;" class="btn">&nbsp;&nbsp;Read more&nbsp;</a>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img src="" class="card-img-top" alt="...">
+            <div class="card-body">
+              <p class="card-text" style="padding-bottom: 1rem;">CLHC's programs ensures dignified and compassionate care for your loved one so they can remain independent in their home. Browse through our list of services to learn more.</p>
+              <a class="btn btn-sm" role="button" aria-disabled="true" style="border: 4px solid #455434; border-radius: 25px; color: #455434;
+              font-family: 'Quicksand', sans-serif; font-weight: 700; color: black !important;" class="btn">&nbsp;&nbsp;Read more&nbsp;</a>
             </div>
           </div>
         </div>
@@ -223,7 +267,7 @@
                 independently and comfortably in their own homes. <br><br>The comprehensive services we offer are customized and tailored
                 for each senior to ensure in-home care is an enjoyable experience.
             </h3><br>
-            <a href="mailto:comfortlovinghomecare@gmail.com" role="button" style="background-color: white; color: #455434; border: 4px solid white; border-radius: 25px;
+            <a href="mailto:comfortlovinghomecare@gmail.com" role="button" style="background-color: white; color: #455434 !important; border: 4px solid white; border-radius: 25px;
                   font-family: 'Quicksand', sans-serif; font-weight: 700;" class="btn btn-sm">
               &nbsp;&nbsp;<i class="fa-regular fa-calendar-check"></i> Book service&nbsp;&nbsp;</button></a>
           </div>
@@ -231,11 +275,7 @@
       </div>
     </div>
 
-    <div style="color: #272727; background-color: white; padding: 4rem 8%; padding-bottom: 2rem;">
-      <h1 class="display-4" style="text-align: center; color: #272727; font-size: 1.70rem;
-        font-family: 'Quicksand', sans-serif; font-weight: 700; padding-bottom: 2% !important;"></h1>
 
-    </div>
     <!--<div class="col-sm" style="padding-top: 4rem;">
         <h1>Comfort in your Home
           from Delaware’s Finest
