--- a/homecare.html
+++ b/homecare.html
@@ -67,13 +67,13 @@
       <!--<h1 class="display-4" style="padding-top: 4%; text-align: center; color: #77c9e6; font-size: 2rem; font-family: 'Quicksand', sans-serif; font-weight: 700;">
         Caregiver Jobs</h1>-->
       <br>
-      <h4 class="display-4" style="padding: 3% 15% 2% 15%; text-align: left; color: #272727; font-size: 1.2rem; font-family: 'Quicksand', sans-serif; font-weight: 500;">
+      <h4 class="display-4" style="padding: 3% 15% 2% 15%; text-align: left; color: #272727; font-size: 1rem; font-family: 'Quicksand', sans-serif; font-weight: 500;">
 You can make a rewarding career out of making a positive difference in the lives of local seniors and their families by joining
 our Visiting Angels' team. Visiting Angels' caregivers make life at home safer, happier, and more comfortable for seniors.
 As a member of the Visiting Angels team, you will make aging in place possible and help minimize the risk of senior isolation
 and the effects that come with it.</h4>
 
-<h4 class="display-4" style="padding: 0 15% 2% 15%; text-align: left; color: #272727; font-size: 1.2rem; font-family: 'Quicksand', sans-serif; font-weight: 500;">
+<h4 class="display-4" style="padding: 0 15% 2% 15%; text-align: left; color: #272727; font-size: 1rem; font-family: 'Quicksand', sans-serif; font-weight: 500;">
 CLHC offers a wide range of caregiver jobs to qualified applicants. We recruit positions related to:<br><br>
 Our locations offer part-time and full-time home care positions with flexible scheduling and highly competitive pay.<br><br>
 <ul>
@@ -85,7 +85,7 @@ Our locations offer part-time and full-time home care positions with flexible sc
 </ul>
 <br>
 
-<h4 style="padding: 7% 15% 7% 15%; color: black; background: url('https://i.ibb.co/GW0XVfS/bgbgbgbgbg.png'); text-align: left; font-size: 1.2rem; font-family: 'Quicksand', sans-serif; font-weight: 500;">Our locations offer <span style="font-weight: 700;">part-time and full-time</span> home care positions with flexible scheduling and highly competitive pay.<br><br>
+<h4 style="padding: 7% 15% 7% 15%; color: black; background: url('https://i.ibb.co/GW0XVfS/bgbgbgbgbg.png'); text-align: left; font-size: 1rem; font-family: 'Quicksand', sans-serif; font-weight: 500;">Our locations offer <span style="font-weight: 700;">part-time and full-time</span> home care positions with flexible scheduling and highly competitive pay.<br><br>
 Our professional caregiver duties will vary depending on the needs and requests of the client and family. Common home care
 duties and caregiver job descriptions may include:<br><br>
 <ul>
@@ -98,73 +98,107 @@ duties and caregiver job descriptions may include:<br><br>
 </ul>
 
 <br>
-<h4 class="display-4" style="padding: 5% 15% 7% 15%; text-align: left; color: #272727; font-size: 1.2rem; font-family: 'Quicksand', sans-serif; font-weight: 500;">
+<h4 class="display-4" style="padding: 5% 15% 7% 15%; text-align: left; color: #272727; font-size: 1rem; font-family: 'Quicksand', sans-serif; font-weight: 500;">
   We believe a caregiver's enthusiasm and passion for building relationships with clients is as important as their professional qualifications. Above all else, we are searching for positive and hardworking people who love caring for others.
   <br>
   We look for caregivers who demonstrate the following qualities:<br><br>
 <ul>
-<ol><i style="color: #77c9e6;" class="fa-solid fa-check"></i>&nbsp;Warmth, kindness, and a loving spirit</ol>
-<ol><i style="color: #77c9e6;" class="fa-solid fa-check"></i>&nbsp;Empathy and compassion</ol>
-<ol><i style="color: #77c9e6;" class="fa-solid fa-check"></i>&nbsp;Motivation and patience</ol>
-<ol><i style="color: #77c9e6;" class="fa-solid fa-check"></i>&nbsp;Communication and listening skills</ol>
-<ol><i style="color: #77c9e6;" class="fa-solid fa-check"></i>&nbsp;Observation and attention to detail</ol>
-<ol><i style="color: #77c9e6;" class="fa-solid fa-check"></i>&nbsp;Time management and organization</ol>
+<li>Warmth, kindness, and a loving spirit</li>
+<li>Empathy and compassion</li>
+<li>Motivation and patience</li>
+<li>Communication and listening skills</li>
+<li>Observation and attention to detail</li>
+<li>Time management and organization</li>
 </ul>
 <br>
 Additional qualifications or certifications may be required, depending on the hiring practices of your local office or
 regulations in your state. We encourage you to speak with your local Visiting Angels office about its hiring practices
 and job requirements.
-</h4><br>
-    <div class="con1">
-      <div class="row" style="margin: 0 10% 0 10%;">
-        <div class="col-sm-6">
-
-        </div>
-        <div class="col-sm-6">
-
-        </div>
-      </div>
-    </div>
+</h4>
   </div>
 
-  <div style="padding: 5% 15% 2% 15%; background-color: #e3f7ff;" class="col-sm">
-    <h4 class="display-4 ourserviceheadtext text-center" style="padding: 0 5rem 2% 5rem; text-align: center; color: #272727; font-size: 1.2rem; font-family: 'Quicksand', sans-serif; font-weight: 500;">
-      Are you interested in starting your career with us today? Contact us by filling the form below and we will be back in touch with you shortly.</h4><br>
-    <br>
-    <section class="sectiontop">
-<div class="container">
-<form action="https://formspree.io/f/xzboqdyp" method="POST" id="my-form">
+  <div style="padding: 5% 15% 4% 15%; background: url('https://i.ibb.co/GW0XVfS/bgbgbgbgbg.png');" class="col-sm">
+    <br><h4 class="display-4 ourserviceheadtext text-center" style="padding: 0 5rem 2% 5rem; text-align: center; color: black; font-size: 1.2rem; font-family: 'Quicksand', sans-serif; font-weight:400;">
+      Are you interested in starting your career with us today? Contact us by filling the form below and we will be back in touch with you shortly.</h4>
 
-<div class="form-group">
+    <section class="sectiontop">
+  <div class="container" style="color: black; font-weight:;">
+  <form action="https://formspree.io/f/xzboqdyp" method="POST" id="my-form">
+
+  <div class="form-group">
   <label for="firstName"> Name</label>
   <input type="text" id="firstName" name="firstName">
-</div>
+  </div>
 
-<div class="form-group">
+  <div class="form-group">
   <label for="latsName">Phone number</label>
   <input type="text" id="lastName" name="lastName">
-</div>
+  </div>
 
-<div class="form-group">
+  <div class="form-group">
   <label for="email">Email</label>
   <input type="email" id="email" name="email">
-</div>
+  </div>
 
-<div class="form-group">
-  <label for="message">Message:<label>
+  <div class="form-group">
+  <label for="message">Message:</label>
   <textarea name="message" id="message" cols="30" rows="5"></textarea>
-</div>
+  </div>
 
-<button type="submit" style="font-weight: 700;">Submit</button>
-</form>
-</div>
-<div id="status"></div>
-</section>
-</div>
+  <button type="submit" style="font-weight: 700;">Submit</button>
+  </form>
+  </div>
+  <div id="status"></div>
+  </section>
+  </div>
 
-  <footer class="footer fixed-bottom text-center" style="color: white; background-color: #3d4122;">
-    <p class="footer" style="font-family: 'Quicksand', sans-serif; font-weight: 700;">© 2022 Comfort Loving Home Care</p>
-  </footer>
+  <footer class="footer" style="padding: 3% 15% 2% 15%; background-color: black;">
+      <div class="">
+        <div class="row">
+          <div class="col-sm-12 col-md-6" style="font-weight: 700; color: white; padding-top: 6%; padding-right: 2%;">
+            <h4 style="font-weight: 700; font-size: 1.2rem;">About</h4>
+            <p class="" style="font-weight: 200; font-size: 0.8rem;">Comfort loving Home Care, an agency focusing in home care in Lancaster, Pennsylvania, can be your
+              partner in rebuilding your future by helping you recover from a recent illness that requires monitoring.
+              We will help you deal with the stresses of healing; and as for family caregivers, we will assist you and
+              make your load lighter in the process.</p>
+          </div>
+
+          <div class="col-xs-6 col-md-3" class="col-sm-12 col-md-6" style="font-weight:; color: white; padding-top: 4%;">
+            <h6 style="font-weight: 700; font-size: 1.2rem; color: #79dcff;">&nbsp;Categories</h6>
+            <ul class="footer-links">
+              <li style="font-weight:; color: white;"><a href="file:///C:/Users/Valerie/Documents/chlc/cover/aboutus.html">About Us</a></li>
+              <li style="font-weight:; color: white;"><a href="">Contact Us</a></li>
+              <li style="font-weight:; color: white;"><a href="file:///C:/Users/Valerie/Documents/chlc/cover/services.html">Services</a></li>
+              <li style="font-weight:; color: white;"><a href="file:///C:/Users/Valerie/Documents/chlc/cover/homecare.html">Career</a></li>
+              <li style="font-weight:; color: white;"><a href="">Blogs</a></li>
+            </ul>
+          </div>
+
+          <div class="col-xs-6 col-md-3" class="col-sm-12 col-md-6" style="font-weight:; color: white; padding-top: 4%;">
+            <h6 style="font-weight: 700; font-size: 1.2rem; color: #79dcff">&nbsp;Quick Links</h6>
+            <ul class="footer-links">
+              <li><a href="">Respite Care</a></li>
+              <li><a href="">Homekeeping</a></li>
+              <li><a href="">Companionship Care</a></li>
+              <li><a href="">Medication Reminder</a></li>
+              <li><a href="">Meal Preparation</a></li>
+            </ul>
+          </div>
+        </div>
+        <hr style="color: white !important;">
+      </div>
+        <div class="row" style="font-weight:; color: white; padding-top: 4%; padding-bottom: 4%;">
+          <div class="col">
+            <p class="copyright-text" style="font-weight: 700; color: white; padding-bottom: 4%;">Copyright &copy; 2022 All Rights Reserved by
+         <a href="#">Comfort Loving Homecare</a>.
+            </p>
+            <p>324 North Queen Street,<br>Marietta, Lancaster County, PA,<br> Pennsylvenia, USA</p>
+          </div>
+          <div class="col justify-right">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3052.930152817749!2d-76.58311668511665!3d40.07697008415748!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c89bc7ab713b29%3A0x10d8377a8885e2d5!2sN%20Queen%20St%2C%20Maytown%2C%20PA%2017547%2C%20USA!5e0!3m2!1sen!2suk!4v1667959344362!5m2!1sen!2suk" width="420" height="180" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+          </div>
+        </div>
+</footer>
 </body>
 
 </html>
