--- a/aboutus.html
+++ b/aboutus.html
@@ -66,8 +66,9 @@
       <!--<h1 class="display-4" style="padding-top: 4%; text-align: center; color: #77c9e6; font-size: 2rem; font-family: 'Quicksand', sans-serif; font-weight: 700;">
         Caregiver Jobs</h1>-->
       <br>
-      <h4 class="display-4" style="padding: 3% 15% 2% 15%; text-align: left; color: #272727; font-size: 1rem; font-family: 'Quicksand', sans-serif; font-weight: 500;">
-        “There is no place like home,” as the adage goes. Indeed, recovery rates for patients cared inside a more familiar
+      <h1 class="text-center" style="padding: 3% 15% 0 15%; font-size: 1.7rem; color: #133544; font-weight: 700;">About Us<h1>
+      <h4 class="display-4" style="padding: 1% 15% 0 15%; text-align: left; color: #272727; font-size: 1rem; font-family: 'Quicksand', sans-serif; font-weight: 500;">
+        <span style="font-weight: 700; font-size: 1rem; color: black;">“There is no place like home,”</span> as the adage goes. Indeed, recovery rates for patients cared inside a more familiar
         environment go much faster and higher compared to that of patients confined inside a healthcare institution. Comfort loving
         Home Care, an agency focusing in home care in Lancaster, Pennsylvania, can be your partner in rebuilding your future
         by helping you recover from a recent illness that requires monitoring. We will help you deal with the stresses of healing;
@@ -77,26 +78,33 @@
          Comfort Loving Home Care in its pursuit toward building a worry-free state, especially for the sick and the elders.
 
 <br><br><span style="font-weight: 800;">Call us today by dialing 717-824-7199 or access our contact us to send us a message online.</span></h4><br><br>
+<h1 class="text-center" style="padding: 1% 15% 1% 15%; font-size: 1.7rem; color: #133544; font-weight: 700;">Our Mission<h1>
+  <h4 class="display-4" style="padding: 0 15% 0 15%; text-align: left; color: #272727; font-size: 1rem; font-family: 'Quicksand', sans-serif; font-weight: 500;">
+    Our mission is to provide support and excellent care to seniors who face various challenges of aging, and to children
+    who wish to improve their overall quality of life. We are providing services in Lancaster, PA and surrounding areas, including
+    Chester, Berks, Lebanon, Dauphin, York.<br>
+    Through carefully-designed services, our team of caregivers assists older adults and children in everyday activities.
+    Our aim is to make their day easier and more fulfilling.</h4><br><br>
 
 <div class="container text-center">
-  <div class="row">
-    <div class="col style="padding-right: 0; padding-left: 0;"><img style="object-fit: fill; padding-top:; max-width:100%; max-h style="padding-right: 0; padding-left: 0;eight:100%;" src="https://i.ibb.co/gjBgQnL/im.png" class="cover-image">
+  <div class="row picturerow">
+    <div class="col picturerow"><img style="object-fit: fill; padding-top:; max-width:100%; max-height:100%;" src="https://i.ibb.co/gjBgQnL/im.png" class="cover-image">
     </div>
-    <div class="col"><img style="object-fit: fill; padding-top:; max-width:100%; max-height:100%;" src="https://i.ibb.co/gjBgQnL/im.png" class="cover-image">
+    <div class="col picturerow"><img style="object-fit: fill; padding-top:; max-width:100%; max-height:100%;" src="https://i.ibb.co/gjBgQnL/im.png" class="cover-image">
     </div>
-    <div class="col"><img style="object-fit: fill; padding-top:; max-width:100%; max-height:100%;" src="https://i.ibb.co/gjBgQnL/im.png" class="cover-image">
+    <div class="col picturerow"><img style="object-fit: fill; padding-top:; max-width:100%; max-height:100%;" src="https://i.ibb.co/gjBgQnL/im.png" class="cover-image">
     </div>
-    <div class="col"><img style="object-fit: fill; padding-top:; max-width:100%; max-height:100%;" src="https://i.ibb.co/gjBgQnL/im.png" class="cover-image">
+    <div class="col picturerow"><img style="object-fit: fill; padding-top:; max-width:100%; max-height:100%;" src="https://i.ibb.co/gjBgQnL/im.png" class="cover-image">
     </div>
   </div>
 </div>
 
-<div style="padding: 5% 15% 2% 15%; background: url('https://i.ibb.co/GW0XVfS/bgbgbgbgbg.png');" class="col-sm">
-  <h4 class="display-4 ourserviceheadtext text-center" style="padding: 0 5rem 2% 5rem; text-align: center; color: black; font-size: 1.2rem; font-family: 'Quicksand', sans-serif; font-weight: 700;">
-    Are you interested in starting your career with us today? Contact us by filling the form below and we will be back in touch with you shortly.</h4><br>
-  <br>
+<div style="padding: 5% 15% 4% 15%; background: url('https://i.ibb.co/GW0XVfS/bgbgbgbgbg.png');" class="col-sm">
+  <br><h4 class="display-4 ourserviceheadtext text-center" style="padding: 0 5rem 2% 5rem; text-align: center; color: black; font-size: 1.2rem; font-family: 'Quicksand', sans-serif; font-weight:400;">
+    Are you interested in starting your career with us today? Contact us by filling the form below and we will be back in touch with you shortly.</h4>
+
   <section class="sectiontop">
-<div class="container" style="color: black; font-weight: 700;">
+<div class="container" style="color: black; font-weight:;">
 <form action="https://formspree.io/f/xzboqdyp" method="POST" id="my-form">
 
 <div class="form-group">
@@ -126,9 +134,56 @@
 </section>
 </div>
 
-      <footer class="footer fixed-bottom text-center" style="color: white; background-color: #3d4122;">
-        <p class="footer" style="font-family: 'Quicksand', sans-serif; font-weight: 700;">©2022 Comfort Loving Home Care</p>
-      </footer>
+      <!--<footer class="footer fixed-bottom text-center" style="color: white; background-color: #3d4122;">
+        <p class="footer" style="font-family: 'Quicksand', sans-serif; font-weight: 700;">© 2022 Comfort Loving Home Care</p>
+      </footer>-->
+      <footer class="footer" style="padding: 3% 15% 2% 15%; background-color: black;">
+          <div class="">
+            <div class="row">
+              <div class="col-sm-12 col-md-6" style="font-weight: 700; color: white; padding-top: 6%; padding-right: 2%;">
+                <h4 style="font-weight: 700; font-size: 1.2rem;">About</h4>
+                <p class="" style="font-weight: 200; font-size: 0.8rem;">Comfort loving Home Care, an agency focusing in home care in Lancaster, Pennsylvania, can be your
+                  partner in rebuilding your future by helping you recover from a recent illness that requires monitoring.
+                  We will help you deal with the stresses of healing; and as for family caregivers, we will assist you and
+                  make your load lighter in the process.</p>
+              </div>
+
+              <div class="col-xs-6 col-md-3" class="col-sm-12 col-md-6" style="font-weight:; color: white; padding-top: 4%;">
+                <h6 style="font-weight: 700; font-size: 1.2rem; color: #79dcff;">&nbsp;Categories</h6>
+                <ul class="footer-links">
+                  <li style="font-weight:; color: white;"><a href="file:///C:/Users/Valerie/Documents/chlc/cover/aboutus.html">About Us</a></li>
+                  <li style="font-weight:; color: white;"><a href="">Contact Us</a></li>
+                  <li style="font-weight:; color: white;"><a href="file:///C:/Users/Valerie/Documents/chlc/cover/services.html">Services</a></li>
+                  <li style="font-weight:; color: white;"><a href="file:///C:/Users/Valerie/Documents/chlc/cover/homecare.html">Career</a></li>
+                  <li style="font-weight:; color: white;"><a href="">Blogs</a></li>
+                </ul>
+              </div>
+
+              <div class="col-xs-6 col-md-3" class="col-sm-12 col-md-6" style="font-weight:; color: white; padding-top: 4%;">
+                <h6 style="font-weight: 700; font-size: 1.2rem; color: #79dcff">&nbsp;Quick Links</h6>
+                <ul class="footer-links">
+                  <li><a href="">Respite Care</a></li>
+                  <li><a href="">Homekeeping</a></li>
+                  <li><a href="">Companionship Care</a></li>
+                  <li><a href="">Medication Reminder</a></li>
+                  <li><a href="">Meal Preparation</a></li>
+                </ul>
+              </div>
+            </div>
+            <hr style="color: white !important;">
+          </div>
+            <div class="row" style="font-weight:; color: white; padding-top: 4%; padding-bottom: 4%;">
+              <div class="col">
+                <p class="copyright-text" style="font-weight: 700; color: white; padding-bottom: 4%;">Copyright &copy; 2022 All Rights Reserved by
+             <a href="#">Comfort Loving Homecare</a>.
+                </p>
+                <p>324 North Queen Street,<br>Marietta, Lancaster County, PA,<br> Pennsylvenia, USA</p>
+              </div>
+              <div class="col justify-right">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3052.930152817749!2d-76.58311668511665!3d40.07697008415748!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c89bc7ab713b29%3A0x10d8377a8885e2d5!2sN%20Queen%20St%2C%20Maytown%2C%20PA%2017547%2C%20USA!5e0!3m2!1sen!2suk!4v1667959344362!5m2!1sen!2suk" width="420" height="180" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+              </div>
+            </div>
+    </footer>
 </body>
 
 </html>
